--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -13,10 +13,10 @@ services:
       POSTGRES_PASSWORD: superset
       POSTGRES_USER: superset
     ports:
-      - 5432:5432    
+      - 5432:5432
     volumes:
       - postgres:/var/lib/postgresql/data
-      - ./sql_dump.sql:/docker-entrypoint-initdb.d/sql_dump.sql
+      - ./migrations:/docker-entrypoint-initdb.d/
   superset:
     image: amancevice/superset
     restart: always
