--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - 5432:5432
     volumes:
       - postgres:/var/lib/postgresql/data
-      - ./migrations:/docker-entrypoint-initdb.d/
+      - ./migrations/:/docker-entrypoint-initdb.d/
   superset:
     image: amancevice/superset
     restart: always
